--- a/index.html
+++ b/index.html
@@ -333,12 +333,18 @@
                 
                 return (
                     <div className="flex flex-col h-full max-w-md mx-auto p-6 animate-fade-in bg-white justify-center">
-                        <div className="text-center mb-10">
+                        <div className="text-center mb-8">
                             <div className="inline-flex items-center justify-center p-4 bg-indigo-50 rounded-2xl mb-4">
                                 <Sparkles className="w-10 h-10 text-indigo-600" />
                             </div>
                             <h1 className="text-4xl font-black text-gray-900 mb-2">Ассоциации</h1>
-                            <p className="text-gray-500 text-lg">Тренируй скорость мышления</p>
+                            
+                            <div className="bg-indigo-50/50 rounded-xl p-3 max-w-xs mx-auto border border-indigo-100">
+                                <p className="text-indigo-900 text-sm font-medium leading-snug">
+                                   ⚡️ Видишь слово — быстро называй ассоциации <b>вслух</b>. 
+                                   <br/><span className="text-indigo-600/80 font-normal text-xs">Чем больше, тем лучше!</span>
+                                </p>
+                            </div>
                         </div>
 
                         <div className="space-y-4 w-full">
